--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <p>If you see images below, everything works.</p>
 
   <h2>Logo test</h2>
-  <img src="assets/logo-standalone.png" alt="PVC Logo" width="200" />
+  <img src="assets/logo.svg" alt="PVC Logo" class="logo" />
+
 
   <h2>Banner test</h2>
-  <img src="assets/banner.jpg" alt="PVC Banner" width="400" />
+  <img src="assets/logo.svg" alt="PVC Logo" style="width:80px;margin-bottom:12px;" />
 </body>
 </html>
