--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <p>If you see images below, everything works.</p>
 
   <h2>Logo test</h2>
-  <img src="assets/logo.svg" alt="PVC Logo" class="logo" />
+  <img src="assets/logo.png" alt="PVC Logo" class="nav-logo" />
+
 
 
   <h2>Banner test</h2>
-  <img src="assets/logo.svg" alt="PVC Logo" style="width:80px;margin-bottom:12px;" />
+  <img src="assets/logo.png" alt="PVC Logo" style="width:80px;margin-bottom:12px;" />
 </body>
 </html>
