--- a/index.html
+++ b/index.html
@@ -156,6 +156,40 @@
       </p>
     </section>
 
+    <section id="terminal" class="section terminal-section">
+  <h2>IOS Control Terminal</h2>
+  <p class="terminal-sub">
+    Client connected. Type commands or use keyboard shortcuts while holding <strong>CTRL</strong>.
+  </p>
+
+  <div class="terminal-window">
+    <div class="terminal-header">
+      <span class="dot red"></span>
+      <span class="dot yellow"></span>
+      <span class="dot green"></span>
+      <span class="terminal-title">pvc@illusion-of-security: ~</span>
+    </div>
+    <div class="terminal-body" id="terminal-body">
+      <pre id="terminal-output"></pre>
+      <div class="terminal-input-line">
+        <span class="terminal-prompt">pvc&gt;</span>
+        <span id="terminal-typed"></span><span class="cursor" id="terminal-cursor"></span>
+      </div>
+    </div>
+  </div>
+
+  <div class="terminal-hints">
+    <p><strong>Keyboard shortcuts (hold CTRL and type):</strong></p>
+    <ul>
+      <li><code>PVC</code> → Enable privacy mode.</li>
+      <li><code>SAFU</code> → Render a SAFU status message.</li>
+      <li><code>IOS</code> → Deploy Illusion-of-Security™.</li>
+      <li><code>WTF</code> → Access denied message.</li>
+    </ul>
+  </div>
+</section>
+
+
     <section id="roadmap" class="section">
       <h2>Roadmap</h2>
       <div class="timeline">
