--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#features">Features</a>
       <a href="#tokenomics">Tokenomics</a>
       <a href="#roadmap">Roadmap</a>
-      <a href="#eggs">Easter Eggs</a>
+      <a href="#terminal">Terminal</a>
     </nav>
   </header>
 
@@ -28,9 +28,9 @@
         <p>*Or at least that’s what marketing said.</p>
         <p class="hero-sub">
           Built on our patented <strong>Illusion-of-Security™</strong> framework,
-          PrivacyChain ($PVC) uses concepts like
-          “zero-knowledge fog compression” and “multi-layer opacity consensus”
-          to deliver privacy you can’t verify and we can’t explain.
+          PrivacyChain ($PVC) uses concepts like “zero-knowledge fog compression”
+          and “multi-layer opacity consensus” to deliver privacy you can’t verify
+          and we can’t fully explain.
         </p>
         <div class="hero-cta">
           <a href="#about" class="btn-primary">Learn more</a>
@@ -41,86 +41,115 @@
         <h2>PVC Snapshot</h2>
         <ul>
           <li><span>Chain:</span> Solana</li>
-          <li><span>Type:</span> Meme-grade Privacy Protocol</li>
-          <li><span>Framework:</span> Illusion-of-Security™ v1</li>
-          <li><span>Status:</span> 100% serious & 100% satire</li>
+          <li><span>Type:</span> Privacy-focused protocol token</li>
+          <li><span>Framework:</span> Illusion-of-Security™ (IOS) layer</li>
+          <li><span>Status:</span> Live & community-driven</li>
+          <li>
+            <span>Contract:</span>
+            <code class="addr">PASTE_YOUR_CONTRACT_ADDRESS_HERE</code>
+          </li>
+          <li>
+            <span>Community:</span>
+            <a href="https://x.com/YOUR_X_HANDLE_HERE" target="_blank" rel="noopener">
+              Join us on X
+            </a>
+          </li>
         </ul>
       </div>
     </div>
   </section>
 
-  <!-- BANNER BELOW HERO -->
-  <section class="banner-section">
-    <img src="assets/banner.jpg" alt="PVC Banner" class="banner-img">
-  </section>
-
   <main>
+    <!-- ABOUT -->
     <section id="about" class="section">
       <h2>What is PrivacyChain?</h2>
       <p>
-        PrivacyChain ($PVC) is a parody–serious privacy protocol on Solana.
-        It exists for everyone who has ever nodded along to a crypto thread
-        about zero-knowledge, MPC, encrypted rollups or ephemeral keys…
-        and understood absolutely none of it.
+        PrivacyChain ($PVC) is a meme-serious privacy protocol on Solana. It exists
+        for everyone who has ever nodded along to a thread about zero-knowledge,
+        MPC, encrypted rollups or ephemeral keys… and understood absolutely none of it.
       </p>
       <p>
-        Instead of pretending that everyone “gets” advanced privacy tech,
-        PrivacyChain embraces the reality: <strong>90% of crypto has no idea what’s going on,</strong>
+        Instead of pretending that everyone fully “gets” advanced privacy tech,
+        PrivacyChain embraces the reality: <strong>most of crypto has no idea what’s going on,</strong>
         but still wants to look professional while shilling.
       </p>
       <p>
-        PVC is that mirror: a project that looks and feels like a high-end
-        privacy protocol, while openly admitting the joke — and still leaving
-        room to become something real if the community decides to build.
+        PVC is that mirror: a project that looks and feels like a high-end privacy protocol,
+        while openly admitting the joke — and still leaving room to become something real
+        if the community decides to build.
       </p>
     </section>
 
+    <!-- TERMINAL DIRECTLY UNDER ABOUT -->
+    <section id="terminal" class="section terminal-section">
+      <h2>IOS Control Terminal</h2>
+      <p class="terminal-sub">
+        Client connected. Start typing directly on the page. Try words like
+        <strong>PVC</strong>, <strong>SAFU</strong>, <strong>IOS</strong> or <strong>WTF</strong>.
+      </p>
+
+      <div class="terminal-window">
+        <div class="terminal-header">
+          <span class="dot red"></span>
+          <span class="dot yellow"></span>
+          <span class="dot green"></span>
+          <span class="terminal-title">pvc@illusion-of-security: ~</span>
+        </div>
+        <div class="terminal-body" id="terminal-body">
+          <pre id="terminal-output"></pre>
+          <div class="terminal-input-line">
+            <span class="terminal-prompt">pvc&gt;</span>
+            <span id="terminal-typed"></span><span class="cursor" id="terminal-cursor"></span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FEATURES -->
     <section id="features" class="section section-grid">
       <h2>Key Features</h2>
       <div class="grid">
         <article class="card">
           <h3>Illusion-of-Security™</h3>
           <p>
-            Our flagship framework. Packed with buzzwords, diagrams,
-            and just enough pseudo-math to look legitimate in screenshots.
-            The perfect layer to hide behind when someone asks,
-            “So how does it actually work?”
+            Our flagship framework. Packed with buzzwords, diagrams, and just enough
+            pseudo-math to look legitimate in screenshots. The perfect layer to hide
+            behind when someone asks, “So how does it actually work?”
           </p>
         </article>
         <article class="card">
           <h3>Zero-Knowledge Fog Compression</h3>
           <p>
-            Inspired by ZK proofs and fog machines at techno clubs.
-            We compress information into a dense cloud of “don’t worry about it,”
-            ideal for CT threads and panel discussions.
+            Inspired by ZK proofs and fog machines at techno clubs. We compress information
+            into a dense cloud of “don’t worry about it,” ideal for CT threads and panel talks.
           </p>
         </article>
         <article class="card">
           <h3>Multi-Layer Opacity Consensus</h3>
           <p>
-            A consensus model where nobody is fully sure what’s happening,
-            but it looks amazing in a whitepaper. The more layers we add,
-            the more opaque it becomes — just like most tokenomics.
+            A consensus model where nobody is fully sure what’s happening, but it looks
+            amazing in a whitepaper. The more layers we add, the more opaque it becomes —
+            just like most tokenomics.
           </p>
         </article>
         <article class="card">
           <h3>Pro Dev Roleplay Culture</h3>
           <p>
-            PVC is built for memers, “devs”, and serious builders who enjoy the joke
-            but still want to ship something. You can act like a pro dev,
-            surrounded by others doing exactly the same.
+            PVC is built for memers, “devs” and serious builders who enjoy the joke
+            but still want to ship something. You can act like a pro dev, surrounded
+            by others doing exactly the same.
           </p>
         </article>
       </div>
     </section>
 
+    <!-- TOKENOMICS -->
     <section id="tokenomics" class="section">
       <h2>Tokenomics</h2>
       <p>
-        PVC is designed to feel familiar to crypto natives while leaving space
-        for real evolution if the community decides to build serious tooling.
-        Numbers can be tuned, but the philosophy stays:
-        <strong>fair, transparent, and on-chain.</strong>
+        PVC is designed as a fair-launch style token on Solana, with almost the entire supply
+        flowing directly to the market and community. No hidden allocations, no surprise unlocks.
+        The structure is simple and transparent so holders clearly understand who owns what.
       </p>
 
       <div class="tokenomics-grid">
@@ -129,67 +158,38 @@
           <ul>
             <li>Total supply: 1,000,000,000 PVC</li>
             <li>Chain: Solana</li>
+            <li>Standard: SPL</li>
           </ul>
         </div>
+
         <div class="card">
-          <h3>Initial Allocation (example)</h3>
+          <h3>Distribution</h3>
           <ul>
-            <li>50% — Liquidity & market</li>
-            <li>25% — Community & incentives</li>
-            <li>15% — Team & contributors (vested)</li>
-            <li>10% — Marketing & strategic partnerships</li>
+            <li>~970,000,000 PVC — Community, market, and liquidity.</li>
+            <li>10,000,000 PVC — Developer allocation (locked / vested).</li>
+            <li>10,000,000 PVC — Marketing & growth incentives.</li>
+            <li>10,000,000 PVC — Listings, integrations & ecosystem costs.</li>
           </ul>
         </div>
+
         <div class="card">
           <h3>Philosophy</h3>
           <p>
-            Simple, transparent, meme-compatible.
-            No hidden unlocks, no surprise “oh btw” allocations.
-            If we change anything, it’s communicated publicly,
-            not buried in a PDF.
+            The goal is to keep the tokenomics as honest and readable as possible:
+            most of the supply is in the hands of the community and the open market.
+            Any locked or reserved allocations (dev, marketing, listings) are kept small,
+            publicly communicated, and trackable on-chain.
           </p>
         </div>
       </div>
+
       <p class="note">
-        <strong>Note:</strong> Final numbers adapt to the actual on-chain deployment,
-        but the structure remains simple and understandable.
+        <strong>Note:</strong> Exact numbers can be updated to match the final on-chain configuration,
+        but the principle remains the same: community-first, fair-style distribution.
       </p>
     </section>
 
-    <section id="terminal" class="section terminal-section">
-  <h2>IOS Control Terminal</h2>
-  <p class="terminal-sub">
-    Client connected. Type commands or use keyboard shortcuts while holding <strong>CTRL</strong>.
-  </p>
-
-  <div class="terminal-window">
-    <div class="terminal-header">
-      <span class="dot red"></span>
-      <span class="dot yellow"></span>
-      <span class="dot green"></span>
-      <span class="terminal-title">pvc@illusion-of-security: ~</span>
-    </div>
-    <div class="terminal-body" id="terminal-body">
-      <pre id="terminal-output"></pre>
-      <div class="terminal-input-line">
-        <span class="terminal-prompt">pvc&gt;</span>
-        <span id="terminal-typed"></span><span class="cursor" id="terminal-cursor"></span>
-      </div>
-    </div>
-  </div>
-
-  <div class="terminal-hints">
-    <p><strong>Keyboard shortcuts (hold CTRL and type):</strong></p>
-    <ul>
-      <li><code>PVC</code> → Enable privacy mode.</li>
-      <li><code>SAFU</code> → Render a SAFU status message.</li>
-      <li><code>IOS</code> → Deploy Illusion-of-Security™.</li>
-      <li><code>WTF</code> → Access denied message.</li>
-    </ul>
-  </div>
-</section>
-
-
+    <!-- ROADMAP -->
     <section id="roadmap" class="section">
       <h2>Roadmap</h2>
       <div class="timeline">
@@ -209,7 +209,7 @@
           <ul>
             <li>Release redacted whitepaper & visual “architecture” diagrams.</li>
             <li>Ship professional-looking docs that explain almost nothing.</li>
-            <li>Establish a visual identity (Raydium × Zcash × Scroll × Monero energy).</li>
+            <li>Solidify visual identity (Raydium × Zcash × Scroll × Monero energy).</li>
           </ul>
         </div>
 
@@ -223,12 +223,12 @@
           </ul>
         </div>
 
-        <div class="timeline-item">
+        <div classtimeline-item">
           <h3>Phase 3 — Multi-Shielded Meme Aggregator</h3>
           <p><strong>Status:</strong> Upcoming</p>
           <ul>
             <li>Launch PVC merch aiming for $100k total volume.</li>
-            <li>Begin brand/trademark registrations where feasible.</li>
+            <li>Begin brand / trademark registrations where feasible.</li>
             <li>Host spaces with privacy, infra, memecoins and builders.</li>
           </ul>
         </div>
@@ -243,23 +243,6 @@
           </ul>
         </div>
       </div>
-    </section>
-
-    <section id="eggs" class="section">
-      <h2>Easter Eggs & Meta</h2>
-      <p>
-        PrivacyChain is built to be explored. Expect hidden messages, secret triggers,
-        and weird little surprises across the ecosystem.
-      </p>
-      <ul>
-        <li>Keyboard shortcuts on the site in future versions.</li>
-        <li>CLI tools that “pretend” to audit you.</li>
-        <li>Fake error messages that are actually on-chain jokes.</li>
-      </ul>
-      <p>
-        The goal is simple:
-        <strong>have fun, look professional, and admit we’re all figuring this out as we go.</strong>
-      </p>
     </section>
   </main>
 
