--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     <div class="hero-inner">
       <div class="hero-text">
         <h1>The most secure private protocol on Solana*.</h1>
+        <div class="whitepaper-buttons">
+  <button class="wp-btn" onclick="openWhitepaperModal()">View Redacted Whitepaper</button>
+  <a class="wp-btn download" href="assets/PVC_Whitepaper_Q1_2025.pdf" target="_blank" download>
+    Download Full Whitepaper (PDF)
+  </a>
+</div>
+
         <p>*Or at least that’s what marketing said.</p>
         <p class="hero-sub">
           Built on our patented <strong>Illusion-of-Security™</strong> framework,
@@ -265,6 +272,29 @@
       <button id="close">Close</button>
     </div>
   </div>
+
+  <!-- Whitepaper Modal -->
+<div id="whitepaper-modal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeWhitepaperModal()">&times;</span>
+    <h2>The Redacted Whitepaper</h2>
+    <p>
+      PrivacyChain (PVC) leverages Illusion-of-Security™ technology to create a 
+      cryptographic environment so opaque, even experts simply nod in approval.
+      <br><br>
+      This redacted version contains only the components the auditors were allowed 
+      to see, along with several diagrams that appear meaningful but reveal nothing.
+      <br><br>
+      For the full, unredacted vision — including Zero-Knowledge Fog Compression,
+      Multi-Layer Opacity Consensus, and the Distracted Auditor Protocol —
+      download the complete PDF.
+    </p>
+
+    <a class="wp-btn download" href="assets/PVC_Whitepaper_Q1_2025.pdf" target="_blank" download>
+      Download Full PVC Whitepaper (PDF)
+    </a>
+  </div>
+</div>
 
   <script src="script.js"></script>
 </body>
