Update index dw whitepaper.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>The most secure private protocol on Solana*.</h1>
         <div class="whitepaper-buttons">
   <button class="wp-btn" onclick="openWhitepaperModal()">View Redacted Whitepaper</button>
-  <a class="wp-btn download" href="assets/PVC_Whitepaper_Q1_2025.pdf" target="_blank" download>
+  <a class="wp-btn download" href="assets/PVC_Whitepaper.pdf" target="_blank" download>
     Download Full Whitepaper (PDF)
   </a>
 </div>
