--- a/index.html
+++ b/index.html
@@ -286,6 +286,31 @@
     </a>
   </div>
 </div>
+<!-- Whitepaper Modal -->
+<div id="whitepaper-modal" class="modal">
+  <div class="modal-content">
+    <span class="close" id="wp-close">&times;</span>
+    <h2>The Redacted Whitepaper</h2>
+    <p>
+      PrivacyChain (PVC) leverages Illusion-of-Security™ technology to create a
+      cryptographic environment so opaque, even experts simply nod in approval.
+    </p>
+    <p>
+      This redacted version only shows the parts our imaginary auditors were
+      allowed to see, along with enough jargon to look institutional in screenshots.
+    </p>
+    <p>
+      For the complete narrative — including Zero-Knowledge Fog Compression,
+      Multi-Layer Opacity Consensus and the Distracted Auditor Protocol —
+      download the full PDF:
+    </p>
+    <a class="wp-btn download"
+       href="assets/PVC_Whitepaper_Q1_2025.pdf"
+       target="_blank" rel="noopener">
+      Download Full PVC Whitepaper (PDF)
+    </a>
+  </div>
+</div>
 
   <script src="script.js"></script>
 </body>
