Update index CA & web dex .html

--- a/index.html
+++ b/index.html
@@ -264,6 +264,16 @@
     </div>
   </div>
 
+  <!-- CA Popup -->
+<div id="ca-popup" class="ca-popup">
+  <div class="ca-popup-inner">
+    <button id="ca-popup-close" class="ca-close">×</button>
+    <p>PVC Contract Address:</p>
+    <code id="ca-popup-address" class="addr-popup">PASTE_YOUR_CONTRACT_ADDRESS_HERE</code>
+    <p class="ca-note">Tip: type "CA" anywhere on the page to show this again.</p>
+  </div>
+</div>
+
   <!-- Whitepaper Modal -->
 <div id="whitepaper-modal" class="modal">
   <div class="modal-content">
