Update index x & Pop up.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </li>
         <li>
           <span>Community:</span>
-          <a href="https://x.com/YOUR_X_HANDLE_HERE" target="_blank" rel="noopener">
+          <a href="https://x.com/Privacychainpvc" target="_blank" rel="noopener">
             Join us on X
           </a>
         </li>
@@ -271,6 +271,10 @@
     <p>PVC Contract Address:</p>
     <code id="ca-popup-address" class="addr-popup">PASTE_YOUR_CONTRACT_ADDRESS_HERE</code>
     <p class="ca-note">Tip: type "CA" anywhere on the page to show this again.</p>
+    <p class="ca-note">
+  Official X: <a href="https://x.com/Privacychainpvc" target="_blank">@Privacychainpvc</a>
+</p>
+
   </div>
 </div>
 
