--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- ⚠️ CHANGE THIS LINK TO YOUR REAL DEXSCREENER URL WHEN READY -->
         <a class="wp-btn buy"
-           href="https://dexscreener.com/"
+           href="https://https://pump.fun/coin/3jgdaSVBTuu8R6N2GAH1JdzjXKMGaFbBoAsAQ8CZpump/"
            target="_blank" rel="noopener">
           Buy the Tech
         </a>
